<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="#fff">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmationCode" android:textColor="#000" android:textSize="20dp" android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/codeenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" android:layout_marginTop="5dp" android:layout_margin="5dp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" android:layout_marginTop="10dp" android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000" android:textSize="15dp" android:text="@string/back" android:layout_marginTop="10dp" android:layout_margin="5dp" android:visibility="gone"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendAgain" android:textColor="#000" android:textSize="15dp" android:layout_margin="5dp"/>

</LinearLayout>