<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="#fff">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="#fff">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookTitle" android:textColor="#000" android:textSize="20dp" android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="5dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookAuthor" android:textColor="#000" android:textSize="20dp" android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookPublisher" android:layout_margin="5dp" android:textColor="#000" android:textSize="20dp"/>

    <EditText
        android:id="@+id/bookPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookISBN" android:textColor="#000" android:layout_margin="5dp" android:textSize="20dp"/>

    <EditText
        android:id="@+id/bookISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookDesc" android:textColor="#000" android:textSize="20dp" android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/bookDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" android:layout_margin="5dp"/>

    <Button
        android:id="@+id/done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" android:layout_marginBottom="5dp" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginTop="20dp"/>

</LinearLayout>
</ScrollView>